
[metadata]
name = go_figure
version = 0.0.1
description = plotting code for personal use

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    tqdm
    pandas
    pathlib
    pyaml
    seaborn
    chainconsumer
    corner